adding meta SEO

--- a/index.html
+++ b/index.html
@@ -3,7 +3,34 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Ementy</title>
+    <meta
+      name="keywords"
+      content="GSAP, 3D, Animation, Web, Development, Frontend, Design, Mavis Wisanggeni, WMV"
+    />
+    <meta name="author" content="WMV, Mavis, Mavis Wisanggeni" />
+    <meta property="og:image" content="https://e.top4top.io/p_3327wkjgp1.png" />
+    <meta property="og:image:width" content="1200" />
+    <meta property="og:image:height" content="620" />
+    <meta property="og:url" content="https://ementy.netlify.app/" />
+    <meta
+      name="description"
+      content="Scroll-Triggered Splitting Backgound Animation"
+    />
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:title" content="Ementy" />
+    <meta
+      property="twitter:description"
+      content="Landing Page Reveal Animation"
+    />
+    <meta
+      property="twitter:image:src"
+      content="https://e.top4top.io/p_3327wkjgp1.png"
+    />
+    <meta property="twitter:image:width" content="1200" />
+    <meta property="twitter:image:height" content="1200" />
+    <meta property="twitter:url" content="https://ementy.netlify.app/" />
+    <title>Ementy ― WMV</title>
+    <link href="./assets/Ementy.svg" rel="icon" type="image/x-icon" />
     <link
       rel="stylesheet"
       href="https://unpkg.com/splitting/dist/splitting.css"
@@ -19,7 +46,9 @@
       <section class="innovation">
         <div class="innovation_wrapper">
           <div class="innovation_side">
-            <span>Ementy</span>
+            <a href="https://maviswisanggeni.netlify.app" target="_blank">
+              <span>Ementy</span>
+            </a>
             <span>( Keep Scrolling )</span>
           </div>
 
@@ -60,16 +89,25 @@
                   id="scroll-paragraph"
                 >
                   <p>
-                    A traditional Korean house with rich brown wood, tiled roofs, and a warm, rustic charm, often found in rural areas and hanok villages.
+                    A traditional Korean house with rich brown wood, tiled
+                    roofs, and a warm, rustic charm, often found in rural areas
+                    and hanok villages.
                   </p>
                   <p>
-                    A preserved area of traditional hanok houses, offering cultural experiences, tea houses, and scenic spots in places like Bukchon and Jeonju.
+                    A preserved area of traditional hanok houses, offering
+                    cultural experiences, tea houses, and scenic spots in places
+                    like Bukchon and Jeonju.
                   </p>
                   <p>
-                    A futuristic landmark by Zaha Hadid,Dongdaemun Design Plaza(DDP) is a hub for design, fashion, and cultural events, featuring sleek curves and an LED-lit exterior.
+                    A futuristic landmark by Zaha Hadid,Dongdaemun Design
+                    Plaza(DDP) is a hub for design, fashion, and cultural
+                    events, featuring sleek curves and an LED-lit exterior.
                   </p>
                   <p>
-                    Seoul’s tallest skyscraper at 555 meters, Lotte World Tower features an observatory, luxury hotel, shopping mall, and offices, offering stunning city views and world-class experiences.
+                    Seoul’s tallest skyscraper at 555 meters, Lotte World Tower
+                    features an observatory, luxury hotel, shopping mall, and
+                    offices, offering stunning city views and world-class
+                    experiences.
                   </p>
                 </div>
               </div>
