--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
       content="GSAP, 3D, Animation, Web, Development, Frontend, Design, Mavis Wisanggeni, WMV"
     />
     <meta name="author" content="WMV, Mavis, Mavis Wisanggeni" />
-    <meta property="og:image" content="https://e.top4top.io/p_3327wkjgp1.png" />
+    <meta property="og:image" content="https://a.top4top.io/p_33276fdnt1.png" />
     <meta property="og:image:width" content="1200" />
     <meta property="og:image:height" content="620" />
     <meta property="og:url" content="https://ementy.netlify.app/" />
@@ -24,7 +24,7 @@
     />
     <meta
       property="twitter:image:src"
-      content="https://e.top4top.io/p_3327wkjgp1.png"
+      content="https://a.top4top.io/p_33276fdnt1.png"
     />
     <meta property="twitter:image:width" content="1200" />
     <meta property="twitter:image:height" content="1200" />
